Major version updated. Added auto scholar claiming/payouts, and a lot more.

--- a/config.cfg
+++ b/config.cfg
@@ -1,15 +1,18 @@
 [Manager]
-managerName = Lamp
-managerIds = [344813881757270017]
+programName = Lamp's Axie Scholars
+ownerDiscordID = 344813881757270017
+ownerRoninAddr = 0xc5f700ca10dd77b51669513cdca53a21cbac3bcd
 
 [Server]
 alertsChannelId = 878932385108996097
+leaderboardsChannelId = 878932385108996097
+leaderboardsPeriodHours = 4
 serverIds = [863167399749615686,760585654467166219]
 
 [Bot]
 qrBlacklistIds = []
 prefix = &
-cacheTimeMinutes = 20
+cacheTimeMinutes = 120
 hideScholarRonins = True
 dmErrorsToManagers = True
 
