additional param in config file

--- a/config.cfg
+++ b/config.cfg
@@ -6,14 +6,15 @@ ownerRoninAddr = 0xc5f700ca10dd77b51669513cdca53a21cbac3bcd
 [Server]
 alertsChannelId = 878932385108996097
 leaderboardsChannelId = 878932385108996097
-leaderboardsPeriodHours = 4
-serverIds = [863167399749615686,760585654467166219]
+leaderboardsPeriodHours = 12
+serverIds = []
 
 [Bot]
 qrBlacklistIds = []
+payBlacklistIds = []
 prefix = &
-cacheTimeMinutes = 120
-hideScholarRonins = True
+cacheTimeMinutes = 30
+hideScholarRonins = False
 dmErrorsToManagers = True
 
 # manager timezone
