--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,17 @@
-kaleido
-plotly>=4.14.1
-numpy>=1.19.5
-urllib3>=1.22
-loguru>=0.5.3
-pandas>=1.1.5
-eth_account>=0.5.4
-dislash.py>=1.4.9
-pytz>=2018.3
-matplotlib>=3.3.3
-qrcode>=7.1
-requests>=2.18.4
-discord.py>=1.7.3
-web3>=5.21.0
 aiosqlite>=0.17.0
 beautifulsoup4>=4.10.0
-discord>=1.7.3
+discord.py>=1.7.3
+dislash.py>=1.4.9
+eth_account>=0.5.6
+loguru>=0.5.3
+numpy>=1.19.5
+pandas>=1.1.5
 Pillow>=8.4.0
+plotly>=4.14.1
+pycryptodome>=3.12.0
+pytz>=2018.3
+qrcode>=7.1
+requests>=2.18.4
+urllib3>=1.22
+web3>=5.21.0
+discord>=1.7.3
