added support for email/pass (migration2.py for existing users), config to disable DMs on payouts, and fixed all slash commands

--- a/config.cfg
+++ b/config.cfg
@@ -16,6 +16,7 @@ prefix = &
 cacheTimeMinutes = 30
 hideScholarRonins = False
 dmErrorsToManagers = True
+dmPayoutsToScholars = True
 
 # manager timezone
 timezone1 = US/Eastern
