--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-aiosqlite>=0.17.0
-discord.py>=1.7.3
-dislash.py>=1.4.9
-eth_account>=0.5.6
-loguru>=0.5.3
-numpy>=1.21.4
-pandas>=1.3.4
-Pillow>=8.4.0
-plotly>=5.4.0
-pycryptodome>=3.12.0
-pytz>=2021.3
-qrcode>=7.3.1
-requests>=2.26.0
-urllib3>=1.26.7
-web3>=5.25.0
-discord>=1.7.3
+aiosqlite
+discord.py
+dislash.py
+eth_account
+loguru
+numpy
+pandas
+Pillow
+plotly
+pycryptodome
+pytz
+qrcode
+requests
+urllib3
+web3
+discord
 kaleido
