improved payout skip reporting and ability to require payout address marketplace name

--- a/config.cfg
+++ b/config.cfg
@@ -11,12 +11,14 @@ serverIds = []
 
 [Bot]
 qrBlacklistIds = []
-payBlacklistIds = []
+payBlacklistIds = [870578389948461087]
 prefix = &
 cacheTimeMinutes = 30
 hideScholarRonins = False
 dmErrorsToManagers = True
 dmPayoutsToScholars = True
+requireNaming = False
+requiredName = Lamp
 
 # manager timezone
 timezone1 = US/Eastern
