remove default configs so the bot wont start

--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 [Manager]
 programName = Lamp's Axie Scholars
-ownerDiscordID = 344813881757270017
-ownerRoninAddr = 0xc5f700ca10dd77b51669513cdca53a21cbac3bcd
+ownerDiscordID = 
+ownerRoninAddr = 
 
 [Server]
 alertsChannelId = 878932385108996097
@@ -11,7 +11,7 @@ serverIds = []
 
 [Bot]
 qrBlacklistIds = []
-payBlacklistIds = [870578389948461087]
+payBlacklistIds = []
 prefix = &
 cacheTimeMinutes = 30
 hideScholarRonins = False
