--- a/config.cfg
+++ b/config.cfg
@@ -4,25 +4,28 @@ ownerDiscordID =
 ownerRoninAddr = 
 
 [Server]
-alertsChannelId = 878932385108996097
-leaderboardsChannelId = 878932385108996097
-leaderboardsPeriodHours = 12
+alertsChannelId = 
+leaderboardsChannelId = 
+leaderboardsPeriodHours = 8
 serverIds = []
 
 [Bot]
 qrBlacklistIds = []
 payBlacklistIds = []
+
 prefix = &
 cacheTimeMinutes = 30
 hideScholarRonins = False
+
 dmErrorsToManagers = True
 dmPayoutsToScholars = True
+
 requireNaming = False
 requiredName = Lamp
 
-# manager timezone
 timezone1 = US/Eastern
-
-# scholar timezone
 timezone2 = Asia/Manila
+
+[Encryption]
+salt = mysaltpleasechangeme
 
