--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   prismbot:
     build: .
     restart: always
-    hostname: prismbot
-    container_name: prismbot
+    hostname: lampandmaxaxiebot
+    container_name: lampandmaxaxiebot
     network_mode: host
     logging:
       options:
