--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 version: "3"
 services:
-  lampandmaxaxiebot:
+  prismbot:
     build: .
     restart: always
-    hostname: lampandmaxaxiebot
-    container_name: lampandmaxaxiebot
+    hostname: prismbot
+    container_name: prismbot
     network_mode: host
     logging:
       options:
         max-size: "10m"
         max-file: "3"
+    volumes:
+      - ./axieBot.db:/axieBot.db
